--- a/ai_studio_project/.ebextensions/django_web.config
+++ b/ai_studio_project/.ebextensions/django_web.config
@@ -1,3 +1,5 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: ai_studio_project.wsgi:application
+  aws:elasticbeanstalk:application:environment:
+    DJANGO_SETTINGS_MODULE: ai_studio_project.settings
