--- a/.github/workflows/ci_cd_django.yml
+++ b/.github/workflows/ci_cd_django.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Django Secret Key Setting
-        run: echo ${{ secrets.django_secret_key }} >> ai_studio_project/settings/deploy.py
+        run:  python ai_studio_project/settings/deploy.py ${{ secrets.django_secret_key }}
 
       - name: Create zip deployment package
         run: zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
