--- a/.ebextensions/django_web.config
+++ b/.ebextensions/django_web.config
@@ -2,4 +2,4 @@ option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: ai_studio_project.wsgi:application
   aws:elasticbeanstalk:application:environment:
-    DJANGO_SETTINGS_MODULE: ai_studio_project.settings.deploy
+    DJANGO_SETTINGS_MODULE: ai_studio_project.settings
